# flut-tools

./: .gitignore  README.md  axis.py  baguette.f.zst  exceptions.py  fluthoriz  flutkeep  flutpic  flutrad.py  flutsync.py  gol.py  grid.f.zst  hsh.py  mousepic  test.py  viptext  waves.py
fbflut-contrib/: clearpic  complex  fluppy.f.zst  fluthoriz  flutkeep  flutpic  flutvirt  hi.f.zst  icomplex  magicktext  rainbow  rainfull  viptext
flutrad/: fun.py  waves.py
flutsync/: .gitignore  flutsync.py  gol.py
storeflut/: Cargo.toml
storeflut/src/: lib.rs  main.rs  primative.rs  protocol.rs
