[package]
name = "storeflut"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
futures = { version = "0.3.30", default-features = false, features = ["alloc", "std"] }
nbd-async = "0.6.0"
tokio = { version = "1.38.0", default-features = false, features = ["tokio-macros", "net", "io-util", "io-std", "sync", "rt", "macros", "rt-multi-thread", "time"] }

[features]
scramble = []

[[bin]]
name = "flutblock"
